Pretty up dialog boxes with padding, shadows, and scroll bars to make sure they don't overflow the screen

--- a/win/nacl/nethack.css
+++ b/win/nacl/nethack.css
@@ -146,3 +146,11 @@ body {
   display: table-cell;
 }
 
+.dialog {
+  background-color: white;
+  border: 1px solid rgba(0,0,0,.6);
+  max-height: 80%;
+  overflow-y: auto;
+  padding: 1em;
+  box-shadow: 0 0 1em rgba(0,0,0,.3);
+}
